fixed era text running off screen

--- a/mysite/assets/scss/modules/timeline/_main.scss
+++ b/mysite/assets/scss/modules/timeline/_main.scss
@@ -1,5 +1,5 @@
 .timeline {
-	padding: 45px $desktop-padding $desktop-padding $desktop-padding;
+	padding: 45px 0px $desktop-padding 0px;
 	margin: $desktop-padding 0px;
 	border: 2px solid palette-get(na-black-10);
 	position: relative;
