--- a/mysite/assets/scss/modules/timeline/_split-button.scss
+++ b/mysite/assets/scss/modules/timeline/_split-button.scss
@@ -33,4 +33,5 @@
 	max-width: $max-body-width;
 	margin-left: auto;
 	margin-right: auto;
+	padding: 0px $desktop-padding 15px;
 }
