--- a/mysite/assets/scss/modules/timeline/_title-block.scss
+++ b/mysite/assets/scss/modules/timeline/_title-block.scss
@@ -3,6 +3,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: $desktop-padding;
+	padding: 0px $desktop-padding;
 
 	&__pre-text {
 		@include timeline-subtext;
